# SimplicialSurfaces

./: .codecov.yml  .gitignore  .gitmodules  .mailmap  .travis.yml  CODEOWNERS  Changelog  Cube_edgeColouredGlobal.tex  DocumentationDraft.txt  Double6Gon_FaceLabels.tex  Double6Gon_edgeLabelsOn.tex  Double6Gon_vertexLabels.tex  DrawingStructure  Image_facegraph_Double6gon.tex  Image_facegraph_oct.tex  Image_facegraph_tetrahedron_edgeColouredGlobal.tex  Image_facegraph_tetrahedron_edgeColouredLocal.tex  Image_facegraph_tetrahedron_vertexColouredGlobal.tex  Intros.autodoc  LICENSE  Lego.txt  Makefile  MethodNameChanges  PackageInfo.g  Polygonal_Structures.xml  PossibleCategories  README  README.md  TODO  TODO.txt  TODODoc  Tetrahedron_edgeLabels.tex  Tetrahedron_example.tex  Tetrahedron_vertexLabels.tex  UnderstandingTheCode  UseGAPDoc.g  bend.txt  facegraph_Double6Gon_VertexLabelsOn.tex  facegraph_oct.tex  facegraph_oct_example.tex  (+11 more)
GAPDoc_Image_Extension/: GAPDoc2HTMLExt.g  GAPDoc2LaTeXExt.g  NewMake.g  RunGAPDoc.g  UseGAPDoc.g  minimal_example.xml
GAPDoc_Manual/: ImageTest.tex  Introduction.xml  UseGAPDoc.g
Images/: Octahedron_mmm.tex  Octahedron_rmm.tex  dofue.tex  w10_1.tex  w12_11.tex  w8_1.tex  w8_2.tex  w8_3.tex  w8_4.tex  wild12_1.tex  wild12_2.tex  wild12_3.tex  wild12_4.tex  wild12_5.tex  wild12b_1.tex  wild12b_2.tex
Transfer/: 10  12  14  16  18  20  8  Grape_Modification.g  HTML_BildTest.tex  HowToDoBilder  StripDevelopments  Wachstum.mw  icosahedron.tex  iko2  rename_script_georg.py
_data/: package.yml
flatex/: Makefile.am  configure.ac  flatex.c
(+1056 files in other folders)
